syntax = "proto3";

message Monk {
  string name = 1;
  string message = 2;
  int32 request_number = 3;
}

message UnaryRequest {}

message StreamRequest { int32 delay = 1; }

service HelloMonastery {
  rpc SayHelloMonk(UnaryRequest) returns (Monk);

  rpc SayHelloMonks(StreamRequest) returns (stream Monk);
}